--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Expenses Logger</title>
 </head>
 <body>
@@ -10,6 +11,17 @@
 
     <div class="wrapper">
         <h1>Expenses and Earnings Logger</h1>
+        <nav class="nav">
+            <div class="nav-item">
+                <a href='#'>Invoices</a>
+            </div>
+            <div class="nav-item">
+                <a href='#'>Payments</a>
+            </div>
+            <div class="nav-item">
+                <a href='#'>Add Item</a>
+            </div>
+        </nav>
         <!-- output list -->
         <ul class="item-list">
 
@@ -38,12 +50,14 @@
                 <label>Amount (£):</label>
                 <input type="number" id="amount">
             </div>
-            <button>Add</button>
+           
+                <button>Add</button>
+            
 
         </form>
     </div>
     <footer>
-        <div>
+        <div class="social">
             Social
         </div>
     </footer>
